# llmchain

./: .env.example  .gitignore  1.md  2.md  README.md  agent.py  chat.py  main copy.py  main.py  output.md  pyproject.toml  tools.py
docs/: STEP_1.md  STEP_2.md  teste.md
dump/: tools.py
src/: agent.py  chat.py  llamacpp.py  main.py
